youfull/objects/Report_Center__c.object
<CustomObject>
    <fields>
        <fullName>Avon_Profile__c</fullName>
        <label>Avon Profile</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon Zone Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon Division Manager</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Report Period</label>
        <picklist>
            <picklistValues>
                <fullName>CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC-5</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Can_Impersonate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Impersonate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>File_Extension__c</fullName>
        <label>File Extension</label>
        <picklist>
            <picklistValues>
                <fullName>.xls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.pdf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.csv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.zip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.ppt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.docx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.xlsx</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <inlineHelpText>EOC - End of Campaign
EOM - End of Month
EOD - End of Day

Correponding Translations would be available for the values, but the code values would remain intact.</inlineHelpText>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>EOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Report Center</relationshipLabel>
        <relationshipName>Report_Center</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <label>Report Type</label>
        <picklist>
            <picklistValues>
                <fullName>HIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SL_File_Mask__c</fullName>
        <label>Sales Leader File Mask</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <picklist>
            <picklistValues>
                <fullName>_blank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>_parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>_self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>_top</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title_Level__c</fullName>
        <label>Title Level</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Report Center</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Report Center Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Center</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>